vars: fix prev/next button colors in media viewer

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -758,8 +758,8 @@ OM = _omsg
         --primary-strongest-rgb: var(--fg-0-rgb) //255,255,255;
         --primary-title: var(--fg-2) //#d4d5d7f7;
         --primary-title-rgb: var(--fg-2-rgb) //212,213,215;
-        --product-image-button-background: var(--fg-4) //#f1f1f259;
-        --product-image-button-background-rgb: var(--fg-4-rgb) //241,241,242;
+        --product-image-button-background: var(--bg-4) //#f1f1f259;
+        --product-image-button-background-rgb: var(--bg-4-rgb) //241,241,242;
         --product-thumb-background: var(--bg-3) //#1c282f;
         --product-thumb-background-rgb: var(--bg-3-rgb) //28,40,47;
         --product-thumb-background-deeper: var(--bg-2) //#2b3e49;
