vars: add pale variations of some colors
The yellow one was reported by @RaitaroH, and can be found in upload
preview as an alert when the file is corrupted, or something like that.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -423,6 +423,12 @@ OM = _omsg
         --gray-30-rgb: var(--bg-5-rgb) //247,247,247;
         --gray-700: var(--fg-4) // #4a4a4a;
         --gray-700-rgb: var(--fg-4-rgb) // 74,74,74;
+        --pale-blue-green: var(--b6-4) //#ecfaf5;
+        --pale-blue-green-rgb: var(--b6-4-rgb) //236,250,245;
+        --pale-green: var(--b4-4) //#dcf8c6;
+        --pale-green-rgb: var(--b4-4-rgb) //220,248,198;
+        --pale-yellow: var(--b3-4) //#fff5c4;
+        --pale-yellow-rgb: var(--b3-4-rgb) //255,245,196;
         --teal: var(--ac-0) //#009688;
         --teal-rgb: var(--ac-0-rgb) //0,150,136;
         --teal-light: var(--ac-1) //#1de9b6;
