feat: animate a few more emojis

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2150,7 +2150,11 @@ OM = _omsg
             /// Feat -> Animate emojis.
             if (emoji_ani) {
                 img[src $= '-64.png'] {
-                    /// ♥️, ❤️
+                    /// 🤩, 😍, ☺️,❣️, ♥️, ❤️
+                    &[alt = '🤩'],
+                    &[alt = '😍'],
+                    &[alt = '☺️'],
+                    &[alt = '❣️'],
                     &[alt = '♥️'],
                     &[alt = '❤️'] {
                         animation: heartPulse 1s infinite
