build: add animated emojis option to metadata

--- a/metadata.styl
+++ b/metadata.styl
@@ -128,6 +128,9 @@ emoji_o = 0.8
 /// Options: 'default', 'medium', 'normal', 'small'
 emoji_b = 'default'
 
+/// Animated emojis.
+emoji_ani = 1
+
 // Override incoming message bubble color.
 ow_imsg = 0
 
