--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.0.0
+@version      3.1.0
 @license      MIT
 @preprocessor stylus
 
@@ -344,7 +344,7 @@ OM = _omsg
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 3.0.0 — September 3rd, 2020'
+        --version: 'Dark-WhatsApp 3.1.0 — October 2nd, 2020'
         --message: 'The v3 is here! 🎉 I wrote a blog post about it here: ' + \
                    'https://vednoc.me/blog/next-gen-of-dark-whatsapp \A\A' + \
                    'I started working on an alternative to USo, currently' + \
