vars: add new color variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -654,6 +654,8 @@ OM = _omsg
         --intro-background-rgb: var(--bg-1-rgb) //34,46,53;
         --intro-border: var(--ac-3) //#054740;
         --intro-border-rgb: var(--ac-3-rgb) //5,71,64;
+        --intro-logo: var(--fg-3) //rgba(241,241,242,0.26);
+        --intro-logo-rgb: var(--fg-3-rgb) //241,241,242;
         --intro-secondary: var(--fg-3) //#a6a8aa;
         --intro-secondary-rgb: var(--fg-3-rgb) //166,168,170;
         --inverse: #f1f1f2;
@@ -818,6 +820,8 @@ OM = _omsg
         --spinner-outgoing-rgb: var(--ac-5-rgb) //76,122,117;
         --startup-background: var(--bg-0) //#131c21;
         --startup-background-rgb: var(--bg-0-rgb) //18.6,28.22,33.4;
+        --startup-icon: var(--fg-3) //#6c7175;
+        --startup-icon-rgb: var(--fg-3-rgb) //108,113,117;
         --status-background: var(--bg-1) //#000;
         --status-background-rgb: var(--bg-1-rgb) //0,0,0;
         --status-background-hover: var(--bg-2) //#242424;
@@ -876,8 +880,12 @@ OM = _omsg
         --voip-reject-background-rgb: 229,75,64;
         --wallpaper-background: var(--bg-1) //#2b93ce;
         --wallpaper-background-rgb: var(--bg-1-rgb) //13.12731,19.91681,23.57269;
-        --win32-title-primary: #fff;
-        --win32-title-primary-rgb: 255,255,255;
+        --wallpaper-thumb-border-active: var(--bg-5) //#75787a;
+        --wallpaper-thumb-border-active-rgb: var(--bg-5-rgb) //117,120,122;
+        --wallpaper-thumb-border-hover: var(--bg-4) //#3b4042;
+        --wallpaper-thumb-border-hover-rgb: var(--bg-4-rgb) //59,63.52941,66;
+        --win32-title-primary: var(--fg-1) //#fff;
+        --win32-title-primary-rgb: var(--fg-1-rgb) //255,255,255;
 
         /// Generate DWA color variables.
         for _v in (bg fg ac b1 b2 b3 b4 b5 b6 b7 b8) {
