left: add tweaks for items in chat wallpaper area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1033,7 +1033,7 @@ OM = _omsg
 
             /// Expand default chat wallpaper.
             &:first-child {
-                border: 4px solid bg3 i
+                &:not(._1rIeG) { border: 4px solid bg2 i }
                 &, &::after { width: calc(3 * 82px + 30px) i }
                 span {
                     font-size: 0 i
@@ -1048,8 +1048,7 @@ OM = _omsg
             /[style *= 'rgb(222\, 227\, 233)'],
             /[style *= 'rgb(217\, 218\, 222)'],
             /[style *= 'rgb(192\, 193\, 196)'] {
-                border: 4px solid bg3 i
-                c: 0 0 bg1
+                c: 0 0 bg2
             }
         }
 
