right: fix a regression with group participants

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1462,7 +1462,8 @@ OM = _omsg
             /// Right -> Invite to group.
             > div:nth-child(3) {
                 header + div {
-                    > div:first-child, div[role='button'] {
+                    > div:first-child.HsWVk, // Invite link wrapper.
+                    > div[role='button'] {
                         --background-default: bg1
                         --background-default-hover: bg2
                     }
