--- a/wa.user.styl
+++ b/wa.user.styl
@@ -658,7 +658,7 @@ OM = _omsg
         --intro-logo-rgb: var(--fg-3-rgb) //241,241,242;
         --intro-secondary: var(--fg-3) //#a6a8aa;
         --intro-secondary-rgb: var(--fg-3-rgb) //166,168,170;
-        --inverse: #f1f1f2;
+        --inverse: var(--fg-0) //#f1f1f2;
         --inverse-rgb: var(--fg-0-rgb) //241,241,242;
         --labels-icon: #f1f1f266;
         --labels-icon-rgb: var(--fg-3-rgb) //241,241,242;
